# Facemash2

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/docs/: Documentation-Client.md  client.md
client/include/: mainwindow.h  photogroup.cpp  photogroup.h  photoset.h  photosetscontroller.h  streamdisplay.h  widget.h
client/libs/clientnetwork/: CMakeLists.txt
client/libs/clientnetwork/docs/: clientnetwork.md
client/libs/clientnetwork/include/: data.h  myclient.h
client/libs/clientnetwork/source/: data.cpp  myclient.cpp
client/libs/clientnetwork/test/: test.cpp
client/libs/localfilemanager/: CMakeLists.txt
client/libs/localfilemanager/docs/: localfilemanager.md
client/libs/localfilemanager/include/: filescanner.h
client/libs/localfilemanager/source/: filescanner.cpp
client/libs/localfilemanager/test/: filemanager_test.cpp
client/libs/photostream/: CMakeLists.txt
client/libs/photostream/docs/: photostream.md
client/libs/photostream/include/: streamdisplay.h  wechatstream.h
client/libs/photostream/libs/: localfilemanager  uiutility
client/libs/photostream/source/: streamdisplay.cpp  wechatstream.cpp
client/libs/photostream/test/: photostream_test.cpp
client/libs/uiutility/: CMakeLists.txt
client/libs/uiutility/docs/: uiutility.md
client/libs/uiutility/include/: ScreenUnit.h  clickablelabel.h  photoeditmenu.h  photolabel.h  photowindow.h  starcheck.h  starcheckbox.cpp  starcheckbox.h  widgetsize.h
client/libs/uiutility/source/: ScreenUnit.cpp  clickablelabel.cpp  photoeditmenu.cpp  photolabel.cpp  photowindow.cpp  starcheck.cpp
client/source/: app.cpp  main.cpp  mainwindow.cpp  photoset.cpp  photosetscontroller.cpp  streamdisplay.cpp  widget.cpp  widget.ui
client/untitled2/: data.cpp  data.h  main.cpp  myclient.cpp  myclient.h  untitled2.pro  widget.cpp  widget.h
server/: CMakeLists.txt  serverDoc.md
server/documents/: serverDoc.md
server/include/: Photo.h  PhotoManager.h  PhotoSystem.hpp  ServerManager.h  User.h  UserManager.h  UserSystem.hpp
server/libs/include/: data.h  myserver.h
server/libs/tcp/: data.cpp  myserver.cpp
server/source/: Photo.cpp  PhotoManager.cpp  ServerManager.cpp  User.cpp  UserManager.cpp  main.cpp
server/untitled1/: data.cpp  data.h  myserver.cpp  myserver.h  untitled1.pro  widget.cpp  widget.h  widget.ui
server/utilities/: CMakeLists.txt
server/utilities/include/: TestUtility.h
server/utilities/source/: TestUtility.cpp
